plasmatheme:for defaults settings use real mask

--follow the new panel background way to access its mask
and use it also for both the blur area and mask area when
they are really needed. Such a case in only when the user
has requested for plasma theme default settings

BUG:455567